[project]
name = "toydata"
version = "1.1.0"
description = "Data Structures in Python"
authors = [
    {name = "Xiangzhuang Shen", email = "datahonor@gmail.com"}
]
license = {text = "LGPL v3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "pre-commit>=2.20.0",
    "ipython>=8.7.0"
]
lint = [
    "black>=22.8.0",
    "pylint>=2.15.3",
    "flake8>=5.0.4",
    "mypy>=0.981",
    "isort>=5.11.3"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.3",
    "mkdocs-material-extensions>=1.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Development tool configuration

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
lines_between_types = 1

[tool.pylint.'MASTER']
fail-under = 8.0

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "useless-super-delegation",
]

[tool.pylint.'FORMAT']
max-line-length = 88

[tool.pytest.ini_options]
# TODO: change cov percent from 0 to 90
addopts = "-v --cov=toydata --cov-fail-under 0 --cov-report=term --cov-report=xml --cov-report=html"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'def __repr__',
]
fail_under = 90
precision = 1
skip_empty = true
sort = "-Cover"
